tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__ieee__20000320_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/ieee__20000320-1.c" (c, x86_64-unknown-linux-gnu)
global failed : s32i = 0 [external, default, align 4, dso_local]
global ud : rec_dl = zero [external, default, align 8, dso_local]
global uf : rec_fl = zero [external, default, align 4, dso_local]

fn c(%arg0: u64i, %arg1: u32i) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: u64i, %arg1: u32i):
        %61 = alloca u64i, "d", align 8
        %62 = alloca u32i, "f", align 4
        store %arg0, %61
        store %arg1, %62
        %63 = load %61 : u64i, align 8
        %64 = get_global @ud : rec_dl*
        %65 = get_member %64[1] "ll" : u64i*
        store %63, %65, align 8
        %66 = get_global @ud : rec_dl*
        %67 = get_member %66[0] "d" : double*
        %68 = load %67 : double, align 8
        %69 = cast(floating) %68 : float
        %70 = get_global @uf : rec_fl*
        %71 = get_member %70[0] "f" : float*
        store %69, %71, align 4
        scope {
            %72 = get_global @uf : rec_fl*
            %73 = get_member %72[1] "l" : u32i*
            %74 = load %73 : u32i, align 4
            %75 = load %62 : u32i, align 4
            %76 = cmp ne %74, %75 : bool
            if %76 {
                %77 = get_global @failed : s32i*
                %78 = load %77 : s32i, align 4
                %79 = inc %78 : s32i [nsw]
                store %79, %77, align 4
                yield
            }
            yield
        }
        return
}
fn exit(%arg0: s32i) -> void [external, c];
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    scope {
        %51 = const 4 : u64i
        %52 = const 4 : u64i
        %53 = cmp ne %51, %52 : bool
        %54 = ternary %53 ? { : bool
            %60 = const #true : bool
            yield %60
        } : {
            %57 = const 8 : u64i
            %58 = const 8 : u64i
            %59 = cmp ne %57, %58 : bool
            yield %59
        }
        if %54 {
            %55 = get_global @exit : ((s32i) -> void)*
            %56 = const 0 : s32i
            call @exit(%56) [all]
            yield
        }
        yield
    }
    %2 = const 3931642474694443008 : u64i
    %3 = const 0 : u32i
    call @c(%2, %3) [all]
    %4 = const 3931642474694443009 : u64i
    %5 = const 1 : u32i
    call @c(%4, %5) [all]
    %6 = const 3936146074321813503 : u64i
    %7 = const 1 : u32i
    call @c(%6, %7) [all]
    %8 = const 3936146074321813504 : u64i
    %9 = const 1 : u32i
    call @c(%8, %9) [all]
    %10 = const 3938397874135498751 : u64i
    %11 = const 1 : u32i
    call @c(%10, %11) [all]
    %12 = const 3938397874135498752 : u64i
    %13 = const 2 : u32i
    call @c(%12, %13) [all]
    %14 = const 3940649673949183999 : u64i
    %15 = const 2 : u32i
    call @c(%14, %15) [all]
    %16 = const 3940649673949184000 : u64i
    %17 = const 2 : u32i
    call @c(%16, %17) [all]
    %18 = const 3940649673949184001 : u64i
    %19 = const 2 : u32i
    call @c(%18, %19) [all]
    %20 = const 4039728865214463999 : u64i
    %21 = const 8388607 : u32i
    call @c(%20, %21) [all]
    %22 = const 4039728865214464000 : u64i
    %23 = const 8388608 : u32i
    call @c(%22, %23) [all]
    %24 = const 4039728865214464001 : u64i
    %25 = const 8388608 : u32i
    call @c(%24, %25) [all]
    %26 = const 4039728865751334911 : u64i
    %27 = const 8388608 : u32i
    call @c(%26, %27) [all]
    %28 = const 4039728865751334912 : u64i
    %29 = const 8388608 : u32i
    call @c(%28, %29) [all]
    %30 = const 4039728865751334913 : u64i
    %31 = const 8388608 : u32i
    call @c(%30, %31) [all]
    %32 = const 4039728866019770368 : u64i
    %33 = const 8388608 : u32i
    call @c(%32, %33) [all]
    %34 = const 4039728866019770369 : u64i
    %35 = const 8388609 : u32i
    call @c(%34, %35) [all]
    %36 = const 4039728866556641279 : u64i
    %37 = const 8388609 : u32i
    call @c(%36, %37) [all]
    %38 = const 4039728866556641280 : u64i
    %39 = const 8388610 : u32i
    call @c(%38, %39) [all]
    %40 = const 4039728867093512192 : u64i
    %41 = const 8388610 : u32i
    call @c(%40, %41) [all]
    %42 = const 4039728867093512193 : u64i
    %43 = const 8388611 : u32i
    call @c(%42, %43) [all]
    scope {
        %45 = get_global @failed : s32i*
        %46 = load %45 : s32i, align 4
        %47 = cast(int_to_bool) %46 : bool
        if %47 {
            %50 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        } else {
            %48 = get_global @exit : ((s32i) -> void)*
            %49 = const 0 : s32i
            call @exit(%49) [all]
            yield
        }
        yield
    }
    %44 = load %0 : s32i
    return %44
}
