tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__ieee__20010226_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/ieee__20010226-1.c" (c, x86_64-unknown-linux-gnu)
global dfrom : long_double<f80> = 1.100000e+00 [external, default, align 16, dso_local]
global m1 : long_double<f80> = 0.000000e+00 [external, default, align 16, dso_local]
global m2 : long_double<f80> = 0.000000e+00 [external, default, align 16, dso_local]
global mant_long : u64i = 0 [external, default, align 8, dso_local]

fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    scope {
        %26 = const 1.08420217248550443401E-19 : long_double<f80>
        %27 = const 4.65661287307739257813E-10 : long_double<f80>
        %28 = cmp gt %26, %27 : bool
        if %28 {
            %29 = const 0 : s32i
            store %29, %0
            %30 = load %0 : s32i
            return %30
        }
        yield
    }
    %2 = get_global @dfrom : long_double<f80>*
    %3 = load %2 : long_double<f80>, align 16
    %4 = const 2.000000e+00 : long_double<f80>
    %5 = fdiv %3, %4 : long_double<f80>
    %6 = get_global @m1 : long_double<f80>*
    store %5, %6, align 16
    %7 = get_global @m1 : long_double<f80>*
    %8 = load %7 : long_double<f80>, align 16
    %9 = const 0x401F8000000000000000 : long_double<f80>
    %10 = fmul %8, %9 : long_double<f80>
    %11 = get_global @m2 : long_double<f80>*
    store %10, %11, align 16
    %12 = get_global @m2 : long_double<f80>*
    %13 = load %12 : long_double<f80>, align 16
    %14 = cast(float_to_int) %13 : u64i
    %15 = const 4294967295 : u64i
    %16 = and %14, %15 : u64i
    %17 = get_global @mant_long : u64i*
    store %16, %17, align 8
    scope {
        %19 = get_global @mant_long : u64i*
        %20 = load %19 : u64i, align 8
        %21 = const 2362232012 : u64i
        %22 = cmp eq %20, %21 : bool
        if %22 {
            %24 = const 0 : s32i
            store %24, %0
            %25 = load %0 : s32i
            return %25
        } else {
            %23 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %18 = load %0 : s32i
    return %18
}
