tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__ieee__20041213_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/ieee__20041213-1.c" (c, x86_64-unknown-linux-gnu)
global once : s32i = 0 [external, default, align 4, dso_local]
global x : double = 0.000000e+00 [external, default, align 8, dso_local]

fn abort() -> void [external, c, nothrow];
fn foo() -> double [external, c, no_inline, dso_local, nothrow] {
    %8 = alloca double, "__retval", align 8
    scope {
        %13 = get_global @once : s32i*
        %14 = load %13 : s32i, align 4
        %15 = inc %14 : s32i [nsw]
        store %15, %13, align 4
        %16 = cast(int_to_bool) %14 : bool
        if %16 {
            %17 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %9 = const 0.000000e+00 : double
    %10 = const 0.000000e+00 : double
    %11 = fdiv %9, %10 : double
    store %11, %8
    %12 = load %8 : double
    return %12
}
fn sqrt(%arg0: double) -> double [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = get_global @sqrt : ((double) -> double)*
    %3 = call @foo() : double [all]
    %4 = call @sqrt(%3) : double [all]
    %5 = get_global @x : double*
    store %4, %5, align 8
    %6 = const 0 : s32i
    store %6, %0
    %7 = load %0 : s32i
    return %7
}
