tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__ieee__920518_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/ieee__920518-1.c" (c, x86_64-unknown-linux-gnu)
global u : u32i = 2147483839 [external, default, align 4, dso_local]
global f0 : float = 2.14748365E+9 [external, default, align 4, dso_local]
global f1 : float = 2.1474839E+9 [external, default, align 4, dso_local]

fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca float, "f", align 4
    %2 = const 0 : s32i
    store %2, %0
    %3 = get_global @u : u32i*
    %4 = load %3 : u32i, align 4
    %5 = cast(int_to_float) %4 : float
    store %5, %1, align 4
    scope {
        %9 = load %1 : float, align 4
        %10 = get_global @f0 : float*
        %11 = load %10 : float, align 4
        %12 = cmp eq %9, %11 : bool
        if %12 {
            %13 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %6 = get_global @exit : ((s32i) -> void)*
    %7 = const 0 : s32i
    call @exit(%7) [all]
    %8 = load %0 : s32i
    return %8
}
