tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__ieee__930529_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/ieee__930529-1.c" (c, x86_64-unknown-linux-gnu)
fn exit(%arg0: s32i) -> void [external, c];
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca rec_anon2E0, "d", align 8
    %2 = const 0 : s32i
    store %2, %0
    %3 = const 1.000000e+00 : double
    %4 = const 7.000000e+00 : double
    %5 = fdiv %3, %4 : double
    %6 = get_member %1[0] "d" : double*
    store %5, %6, align 8
    scope {
        %10 = const 1 : u64i
        %11 = const 8 : u64i
        %12 = mul %10, %11 : u64i
        %13 = const 8 : u64i
        %14 = cmp eq %12, %13 : bool
        if %14 {
            scope {
                %88 = const 0 : s64i
                %89 = get_member %1[1] "c" : u8i[8]*
                %90 = get_element %89[%88] : u8i*
                %91 = load %90 : u8i, align 8
                %92 = cast(integral) %91 : s32i
                %93 = const 146 : s32i
                %94 = cmp eq %92, %93 : bool
                %95 = ternary %94 ? { : bool
                    %153 = const 1 : s64i
                    %154 = get_member %1[1] "c" : u8i[8]*
                    %155 = get_element %154[%153] : u8i*
                    %156 = load %155 : u8i, align 1
                    %157 = cast(integral) %156 : s32i
                    %158 = const 36 : s32i
                    %159 = cmp eq %157, %158 : bool
                    yield %159
                } : {
                    %152 = const #false : bool
                    yield %152
                }
                %96 = ternary %95 ? { : bool
                    %145 = const 2 : s64i
                    %146 = get_member %1[1] "c" : u8i[8]*
                    %147 = get_element %146[%145] : u8i*
                    %148 = load %147 : u8i, align 2
                    %149 = cast(integral) %148 : s32i
                    %150 = const 73 : s32i
                    %151 = cmp eq %149, %150 : bool
                    yield %151
                } : {
                    %144 = const #false : bool
                    yield %144
                }
                %97 = ternary %96 ? { : bool
                    %137 = const 3 : s64i
                    %138 = get_member %1[1] "c" : u8i[8]*
                    %139 = get_element %138[%137] : u8i*
                    %140 = load %139 : u8i, align 1
                    %141 = cast(integral) %140 : s32i
                    %142 = const 146 : s32i
                    %143 = cmp eq %141, %142 : bool
                    yield %143
                } : {
                    %136 = const #false : bool
                    yield %136
                }
                %98 = ternary %97 ? { : bool
                    %129 = const 4 : s64i
                    %130 = get_member %1[1] "c" : u8i[8]*
                    %131 = get_element %130[%129] : u8i*
                    %132 = load %131 : u8i, align 4
                    %133 = cast(integral) %132 : s32i
                    %134 = const 36 : s32i
                    %135 = cmp eq %133, %134 : bool
                    yield %135
                } : {
                    %128 = const #false : bool
                    yield %128
                }
                %99 = ternary %98 ? { : bool
                    %121 = const 5 : s64i
                    %122 = get_member %1[1] "c" : u8i[8]*
                    %123 = get_element %122[%121] : u8i*
                    %124 = load %123 : u8i, align 1
                    %125 = cast(integral) %124 : s32i
                    %126 = const 73 : s32i
                    %127 = cmp eq %125, %126 : bool
                    yield %127
                } : {
                    %120 = const #false : bool
                    yield %120
                }
                %100 = ternary %99 ? { : bool
                    %113 = const 6 : s64i
                    %114 = get_member %1[1] "c" : u8i[8]*
                    %115 = get_element %114[%113] : u8i*
                    %116 = load %115 : u8i, align 2
                    %117 = cast(integral) %116 : s32i
                    %118 = const 194 : s32i
                    %119 = cmp eq %117, %118 : bool
                    yield %119
                } : {
                    %112 = const #false : bool
                    yield %112
                }
                %101 = ternary %100 ? { : bool
                    %105 = const 7 : s64i
                    %106 = get_member %1[1] "c" : u8i[8]*
                    %107 = get_element %106[%105] : u8i*
                    %108 = load %107 : u8i, align 1
                    %109 = cast(integral) %108 : s32i
                    %110 = const 63 : s32i
                    %111 = cmp eq %109, %110 : bool
                    yield %111
                } : {
                    %104 = const #false : bool
                    yield %104
                }
                if %101 {
                    %102 = get_global @exit : ((s32i) -> void)*
                    %103 = const 0 : s32i
                    call @exit(%103) [all]
                    yield
                }
                yield
            }
            scope {
                %16 = const 7 : s64i
                %17 = get_member %1[1] "c" : u8i[8]*
                %18 = get_element %17[%16] : u8i*
                %19 = load %18 : u8i, align 1
                %20 = cast(integral) %19 : s32i
                %21 = const 146 : s32i
                %22 = cmp eq %20, %21 : bool
                %23 = ternary %22 ? { : bool
                    %81 = const 6 : s64i
                    %82 = get_member %1[1] "c" : u8i[8]*
                    %83 = get_element %82[%81] : u8i*
                    %84 = load %83 : u8i, align 2
                    %85 = cast(integral) %84 : s32i
                    %86 = const 36 : s32i
                    %87 = cmp eq %85, %86 : bool
                    yield %87
                } : {
                    %80 = const #false : bool
                    yield %80
                }
                %24 = ternary %23 ? { : bool
                    %73 = const 5 : s64i
                    %74 = get_member %1[1] "c" : u8i[8]*
                    %75 = get_element %74[%73] : u8i*
                    %76 = load %75 : u8i, align 1
                    %77 = cast(integral) %76 : s32i
                    %78 = const 73 : s32i
                    %79 = cmp eq %77, %78 : bool
                    yield %79
                } : {
                    %72 = const #false : bool
                    yield %72
                }
                %25 = ternary %24 ? { : bool
                    %65 = const 4 : s64i
                    %66 = get_member %1[1] "c" : u8i[8]*
                    %67 = get_element %66[%65] : u8i*
                    %68 = load %67 : u8i, align 4
                    %69 = cast(integral) %68 : s32i
                    %70 = const 146 : s32i
                    %71 = cmp eq %69, %70 : bool
                    yield %71
                } : {
                    %64 = const #false : bool
                    yield %64
                }
                %26 = ternary %25 ? { : bool
                    %57 = const 3 : s64i
                    %58 = get_member %1[1] "c" : u8i[8]*
                    %59 = get_element %58[%57] : u8i*
                    %60 = load %59 : u8i, align 1
                    %61 = cast(integral) %60 : s32i
                    %62 = const 36 : s32i
                    %63 = cmp eq %61, %62 : bool
                    yield %63
                } : {
                    %56 = const #false : bool
                    yield %56
                }
                %27 = ternary %26 ? { : bool
                    %49 = const 2 : s64i
                    %50 = get_member %1[1] "c" : u8i[8]*
                    %51 = get_element %50[%49] : u8i*
                    %52 = load %51 : u8i, align 2
                    %53 = cast(integral) %52 : s32i
                    %54 = const 73 : s32i
                    %55 = cmp eq %53, %54 : bool
                    yield %55
                } : {
                    %48 = const #false : bool
                    yield %48
                }
                %28 = ternary %27 ? { : bool
                    %41 = const 1 : s64i
                    %42 = get_member %1[1] "c" : u8i[8]*
                    %43 = get_element %42[%41] : u8i*
                    %44 = load %43 : u8i, align 1
                    %45 = cast(integral) %44 : s32i
                    %46 = const 194 : s32i
                    %47 = cmp eq %45, %46 : bool
                    yield %47
                } : {
                    %40 = const #false : bool
                    yield %40
                }
                %29 = ternary %28 ? { : bool
                    %33 = const 0 : s64i
                    %34 = get_member %1[1] "c" : u8i[8]*
                    %35 = get_element %34[%33] : u8i*
                    %36 = load %35 : u8i, align 8
                    %37 = cast(integral) %36 : s32i
                    %38 = const 63 : s32i
                    %39 = cmp eq %37, %38 : bool
                    yield %39
                } : {
                    %32 = const #false : bool
                    yield %32
                }
                if %29 {
                    %30 = get_global @exit : ((s32i) -> void)*
                    %31 = const 0 : s32i
                    call @exit(%31) [all]
                    yield
                }
                yield
            }
            %15 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %7 = get_global @exit : ((s32i) -> void)*
    %8 = const 0 : s32i
    call @exit(%8) [all]
    %9 = load %0 : s32i
    return %9
}
